Enhancements to: v4.1.0 Development Release - July 21, 2023
   - Upgrade to gwnum v30.14b1 which addresses a crash when primality testing.
   - Removed most of the help output from command line as it is in some cases
     incomplete and wrong in other cases.  pfgwdoc.txt should be used as
     the reference for all command line options.

Enhancements to: v4.0.7 Development Release - June 6, 2023
   - Fix an issue with primality testing of terms less than 40 bits in length as it
     will show them as "factored" instead of doing the primality test.
   - Added sonly and sgap benchmark parameters (see pfgwdoc.txt).

Enhancements to: v4.0.6 Development Release - April 24, 2023
   - Replaced sprintf/vsprintf with snprintf/vsnprintf.
   - Added code to support Gerbicz Error Checking to PRP testing.  They are not enabled.
   - Upgraded to gwnum v30.12b1
   
Enhancements to: v4.0.4 Development Release - January 2, 2023
   - Upgraded to Visual Studio 2022.
   - Added -A allowing the specification of single CPU for pfgw to use.  This
     is supported only for Windows at this time and should be primarily used on CPUs
     with a mix of efficiency and performance cores.
   - Added CC file format support.  This was added to support ccsieve (from the mtsieve
     framework) as the format is easier to understand than the newpgen format.  Read
     the ccfileformat.txt for more details.
   - Upgraded to gwnum v30.10b2.
   
Enhancements to: v4.0.2 Development Release - March 4, 2022
   - Changed Sm() and Smr() evaluators.  See pfgwdoc.txt for details.

Enhancements to: v4.0.1 Development Release - December 3, 2019
   - Use gwsquare_carefully() for last 50 iterations as the last 30
     iterations are not enough to avoid undetectable roundoff errors which occur
     in the candidate term (10^210731-1)/9.
   - Upgraded to the latest version of Visual Studio 19 for the Windows build.
     
Enhancements to: v4.0.0 Development Release - May 28, 2019
   - Upgraded solution VS 2017.