@@ -81,7 +81,7 @@ CAPTION "About WinPFGW"
 FONT 8, "MS Sans Serif"
 BEGIN
     ICON            IDI_ICON_GREEN,IDC_STATIC,7,21,20,20
-    LTEXT           "Change String Resource, NOT this!   Open WinPFGW Version 4.1.0 with save/restore code",IDC_STATIC_WINPFGW_VERSION,41,10,225,18,SS_NOPREFIX
+    LTEXT           "Change String Resource, NOT this!   Open WinPFGW Version 4.1.1 with save/restore code",IDC_STATIC_WINPFGW_VERSION,41,10,225,18,SS_NOPREFIX
     LTEXT           "Copyright (C) 2000/2023 OpenPFGW group",IDC_STATIC,41,49,142,8
     DEFPUSHBUTTON   "OK",IDOK,7,136,33,14,WS_GROUP
     LTEXT           "GUI Developed by Jim Fougeron",IDC_STATIC,41,59,119,8
@@ -158,8 +158,8 @@ END
 //
 
 VS_VERSION_INFO VERSIONINFO
- FILEVERSION 4,1,0,0
- PRODUCTVERSION 4,1,0,0
+ FILEVERSION 4,1,1,0
+ PRODUCTVERSION 4,1,1,0
  FILEFLAGSMASK 0x3fL
 #ifdef _DEBUG
  FILEFLAGS 0x1L
@@ -175,12 +175,12 @@ BEGIN
         BLOCK "040904b0"
         BEGIN
             VALUE "FileDescription", "WinPFGW"
-            VALUE "FileVersion", "4, 1, 0, 0"
+            VALUE "FileVersion", "4, 1, 1, 0"
             VALUE "InternalName", "WinPFGW"
             VALUE "LegalCopyright", "Copyright (C) 2000-2023 OpenPFGW.  Written by Jim Fougeron and Mark Rodenkirch"
             VALUE "OriginalFilename", "WinPFGW.exe"
             VALUE "ProductName", "WinPFGW (OpenPFGW Application)"
-            VALUE "ProductVersion", "4, 1, 0, 0"
+            VALUE "ProductVersion", "4, 1, 1, 0"
         END
     END
     BLOCK "VarFileInfo"
@@ -349,7 +349,7 @@ STRINGTABLE
 BEGIN
     IDS_ABOUTBOX            "&About WinPFGW..."
     IDS_WINPFGW_VERSION_STRING 
-                            "Open WinPFGW Version 4.1.0 with save/restore + flashing icon completion"
+                            "Open WinPFGW Version 4.1.1 with save/restore + flashing icon completion"
 END
 
 #endif    // English (U.S.) resources
