@@ -1,3 +1,6 @@
+Enhancements to: v4.1.1 Development Release - August 14, 2023
+   - Upgrade to gwnum v30.15b1 which addresses a crash when primality testing.
+
 Enhancements to: v4.1.0 Development Release - July 21, 2023
    - Upgrade to gwnum v30.14b1 which addresses a crash when primality testing.
    - Removed most of the help output from command line as it is in some cases
